RIP-v9.4- /mobile overflow fix nin progress

--- a/css/login.css
+++ b/css/login.css
@@ -62,7 +62,7 @@
 .full-page .content {
   display        : flex;
   width          : 100%;
-  height         : 100%;
+  height: auto;
   justify-content: center;
   align-items    : flex-start;
   grid-area      : content;
@@ -358,9 +358,7 @@
 
   .full-page .content {
     align-items: flex-start;
-    height     : 100%;
     padding    : 2rem !important;
-
   }
 
   .full-page h1 {
